2000-08-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/driver22.htm: Update the docs.
	* ntpd/refclock_atom.c (atom_start): Open the device if it hasn't
	been opened already.
	(pps_sample): Make it more visible.
	From Dave Mills.

	* configure.in: 4.0.99k8

	Revert to the older automake.

	* configure.in: The PPSAPI headers use "inline", so require a STDC
	compiler.

	* ntpd/refclock_atom.c (atom_shutdown): Typo
	From Dave Mills

	* configure.in: Convert to autoconf-2.49

	* ntpd/refclock_atom.c: Header cleanup Comment cleanup.  Lose the
	TTYCLK stuff.  Convert to PPSAPI.
	* ntpd/ntp_refclock.c (refclock_newpeer): Move refclock_unpeer().
	From: Dave Mills

2000-08-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure: Fix the autoconf problem...

2000-08-20  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 99k7

	* util/ntptime.c (main): Report TAI stuff
	* ntpq/ntpq.c: CS_COMPLIANCE/CS_JITTER cleanup
	* ntpd/ntp_loopfilter.c (local_clock): sys_error/sys_jitter cleanup.
	kernel PPL cleanup.
	* ntpd/ntp_crypto.c: Check NTP_API if we're doing KERNEL_PLL so we
	can get the TAI stuff.
	* ntpd/ntp_control.c: CS_COMPLIANCE now reports "error" instead of
	"jitter".  CS_JITTER now reports jitter.
	* include/ntpd.h: Added sys_jitter
	* include/ntp_control.h (CS_JITTER): Added
	From: Dave Mills

	* ntpd/cmd_args.c (getCmdOpts): Crack -N at pre-scan, as we do the
	priority wiggle before the final scan.
	From: Tom Smith <smith@cag.lkg.dec.com>
	We might do better to move the priority wiggle to after the final
	scan.  Especially if we want to permit command-line options to
	have decent control over the priority.  When we rewrite the config
	file stuff we might go to a multi-scan to solve some of these
	problems.

2000-08-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: '99k6, and manually fix configure.

	* include/ntp_request.h (NTP_MAXHOSTNAME): 144 -> 32

2000-08-18  Harlan Stenn  <stenn@whimsy.udel.edu>
